# Paker

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Paker.json.template  README.md
cmake/: DetectCPUFeatures.cmake  recommendation.cmake
docs/: COMMAND_LINE_USAGE.md  COMMAND_OPTIMIZATION_SUMMARY.md  COMMAND_REFERENCE.md  COMPLETION_GUIDE.md  FEATURES.md  HEADER_OPTIMIZATION.md  INSTALLATION.md  INSTALL_COMMAND.md  NETWORK_OPTIMIZATION.md  OPENMP_OPTIMIZATION.md  README.md  README_OPTIMIZATION.md  SIMD_OPTIMIZATION.md  SUGGESTION_GUIDE.md
examples/: network_optimization_example.cpp  openmp_optimization_example.cpp  simd_optimization_example.cpp
examples/total_example/: Paker.json
include/: cli.h  package_manager.h
include/Paker/: common.h  info.h  lock.h  output.h  pch.h  update.h  utils.h  version.h
include/Paker/analysis/: project_analyzer.h  project_type_config.h  recommendation_engine.h
include/Paker/cache/: async_cache_manager.h  cache_config.h  cache_manager.h  cache_monitor.h  cache_path_resolver.h  cache_warmup.h  lru_cache_manager.h
include/Paker/commands/: async_io.h  cache.h  cli.h  incremental_parse.h  info.h  install.h  list.h  lock.h  monitor.h  remove_project.h  rollback.h  suggestion.h  update.h  version.h  warmup.h
include/Paker/conflict/: conflict_detector.h  conflict_resolver.h
include/Paker/core/: async_io.h  core_services.h  incremental_updater.h  memory_pool.h  openmp_io.h  output.h  package_manager.h  parallel_executor.h  service_container.h  utils.h  version_history.h
include/Paker/dependency/: dependency_graph.h  dependency_resolver.h  incremental_parser.h  optimized_dependency_graph.h  sources.h  version_manager.h
include/Paker/monitor/: dependency_analyzer.h  diagnostic_tool.h  performance_monitor.h
include/Paker/network/: cdn_manager.h  http2_client.h
include/Paker/simd/: simd_hash.h  simd_utils.h
include/Recorder/: record.h
scripts/: analyze_dependencies.py  build  build.sh  build_optimized.sh  clean.sh  optimize_build.py  optimize_headers.py  performance_test.sh  run.sh  test  test.sh
scripts/bash/: build.sh  clean.sh  test.sh
scripts/completion/: _paker  completion-config.sh  install-completion.sh  paker-completion.bash  smart-completion.py
scripts/python/: build.py  clean.py  run.py  test.py
src/: builtin_repos.cpp  cli.cpp  main.cpp  package_manager.cpp
src/Paker/: cli.cpp  info.cpp  install.cpp  list.cpp  lock.cpp  output.cpp  package_manager.cpp  sources.cpp  update.cpp  utils.cpp
src/Paker/analysis/: project_analyzer.cpp  project_type_config.cpp  recommendation_engine.cpp
src/Paker/cache/: async_cache_manager.cpp  cache_manager.cpp  cache_path_resolver.cpp  cache_warmup.cpp  lru_cache_manager.cpp
src/Paker/commands/: async_io.cpp  cache.cpp  cache_optimized.cpp  cli.cpp  incremental_parse.cpp  info.cpp  install.cpp  list.cpp  lock.cpp  monitor.cpp  remove_project.cpp  rollback.cpp  suggestion.cpp  update.cpp  version.cpp  warmup.cpp
src/Paker/conflict/: conflict_detector.cpp  conflict_resolver.cpp
src/Paker/core/: async_io.cpp  async_io_tools.cpp  core_services.cpp  incremental_updater.cpp  memory_pool.cpp  openmp_io.cpp  output.cpp  package_manager.cpp  parallel_executor.cpp  rollback_utils.cpp  service_container.cpp  utils.cpp  version_history.cpp
src/Paker/dependency/: dependency_graph.cpp  dependency_resolver.cpp  incremental_parser.cpp  optimized_dependency_graph.cpp  smart_parse_strategy.cpp  sources.cpp  version_manager.cpp
src/Paker/monitor/: dependency_analyzer.cpp  diagnostic_tool.cpp  performance_monitor.cpp
src/Paker/network/: cdn_manager.cpp  http2_client.cpp
src/Paker/simd/: simd_hash.cpp  simd_utils.cpp
src/Recorder/: record.cpp
test/: CMakeLists.txt  test_package_manager.cpp
test/integration/: test_integration.cpp
test/unit/: test_async_io.cpp  test_cache_manager.cpp  test_cache_warmup.cpp  test_dependency_resolution.cpp  test_incremental_parser.cpp  test_memory_management.cpp  test_monitoring.cpp  test_package_manager.cpp  test_record.cpp  test_rollback.cpp  test_service_architecture.cpp
